--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
 }
 
 /* Logo and description block styles */
@@ -74,7 +74,8 @@ main {
 .logo {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    width: 50%;
 }
 
 .logo__title {
